<resources>
    <string name="app_name">YosiFlix</string>
    <string name="et_recherche">Rechercher...</string>
    <string name="bt_recherhcer">Afficher</string>
    <string name="home">Home</string>
    <string name="bt_personne">Personne</string>
    <string name="bt_serie">Série</string>
    <string name="bt_film">Film</string>
    <string name="accueil">Accueil</string>
    <string name="label_password">Mot de passe...</string>
    <string name="label_username">Pseudo...</string>
    <string name="label_remember">Mémoriser</string>
    <string name="submit">Connexion</string>
    <string name="confirmer">Confirmer</string>
    <string name="bandeAnnonce">Bande annonce</string>
    <string name="genre">Genre : </string>
    <string name="date">Date : </string>

    <string name="advice"><u>Astuces :</u>\n---------------\n
           * Une fois votre recherche effectuée, restez appuyé sur un film ou une série pour l\'ajouter dans vos favoris.\n\n
           * Afin de supprimer un élément de vos favoris, il vous suffit de rester appuyer sur ce dernier.</string>

    <string name="note">Note : </string>

    <string-array name="s_choix">
        <item>Film</item>
        <item>Série</item>
        <item>Acteur</item>
    </string-array>
</resources>
