<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        >


        <Button
            android:id="@+id/bt_film"
            android:text="@string/bt_film"
            android:background="@drawable/round_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_serie"
            android:text="@string/bt_serie"
            android:background="@drawable/round_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_personne"
            android:text="@string/bt_personne"
            android:background="@drawable/round_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_recherche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_recherche"
        android:textColorHint="@color/texthint"
        android:layout_gravity="center"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:id="@+id/bt_rechercher"
        android:text="@string/bt_recherhcer"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        />

</LinearLayout>